DAY-5/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: 3tier-gateway
  namespace: default
spec:
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
    app.kubernetes.io/name: istio-ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
